<resources>
    <string name="app_name">Weather App</string>
    <string name="min_temp">Low Temp:</string>
    <string name="max_temp">High Temp:</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind Speed</string>
    <string name="city">McHenry,</string>
    <string name="state">IL</string>
</resources>